--- a/html-css-course-master/starter/07-Omnifood-Desktop/content/css/style.css
+++ b/html-css-course-master/starter/07-Omnifood-Desktop/content/css/style.css
@@ -64,14 +64,46 @@ body {
 }
 
 .logo {
-    height: 4.8rem;
+    height: 3.2rem;
 }
 
-.navigation {
-    font-size: 2.4rem;
+.main--nav {
+    font-size: 1.8rem;
     font-weight: 600;
     cursor: pointer;
 }
+
+/* Navigation */
+.nav--list {
+    display: flex;
+    list-style: none;
+    justify-content: center;
+    align-items: center;
+
+}
+
+
+.link--cta {
+    background-color: #e67e22;
+    border-radius: 0.7rem;
+    color: #fff !important;
+}
+
+.navigation--link {
+    color: #333;
+    padding: 1rem 1.2rem;
+    text-decoration: none;
+    display: inline-block;
+    transition: background 0.5s;
+}
+
+.navigation--link:hover {
+    background-color: #ed9e59;
+    border-radius: 0.7rem;
+    color: #fff;
+
+}
+
 
 /* 
 ########################################################
@@ -127,7 +159,7 @@ body {
     border-radius: 1rem;
 
     /* hover "state" transition */
-    transition: 0.5s;
+    transition: background 0.5s;
 }
 
 .btn--filled:hover {
