--- a/html-css-course-master/starter/07-Omnifood-Desktop/content/css/style.css
+++ b/html-css-course-master/starter/07-Omnifood-Desktop/content/css/style.css
@@ -45,7 +45,7 @@ html {
 }
 
 body {
-    font-family: 'Rubic', sans-serif;
+    font-family: 'Rubik', sans-serif;
     font-weight: 400;
     color: #555;
     line-height: 1;
@@ -134,7 +134,7 @@ body {
 }
 
 .heading--primary {
-    font-size: 5.2rem;
+    font-size: 4.8rem;
     font-weight: 700;
     line-height: 1.02;
     letter-spacing: -0.5px;
@@ -208,4 +208,41 @@ body {
 }
 
 
-/* ######################################################## ################         ########## ######################################################### */
+/* ##################################################################  SECTION HOW IT WORKS ########## ############################################### */
+
+.containor {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    background: #536;
+    gap: 3.2rem;
+    font-size: 2.4rem;
+}
+
+.section--how {
+    background: orange;
+    padding: 9.6rem;
+}
+
+.green {
+    background-color: green;
+}
+
+.yellow {
+    background-color: yellow;
+}
+
+.red {
+    background-color: red;
+}
+
+.black {
+    background: black;
+}
+
+.grid--col-3 {
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.grid--col-4 {
+    grid-template-columns: repeat(4, 1fr);
+}
