--- a/html-css-course-master/starter/07-Omnifood-Desktop/content/css/style.css
+++ b/html-css-course-master/starter/07-Omnifood-Desktop/content/css/style.css
@@ -355,14 +355,53 @@ body {
     justify-content: center;
     /* text-align: center; */
     padding: 9.6rem;
+
 }
 
-.meal--1 {
+
+.meal--img-box {
+    border-radius: 1.2rem;
+    box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
+    /* background: #ddd; */
+}
+
+
+
+.meal--img {
     height: 50%;
-    border-radius: 0.8rem;
+    border-top-left-radius: 1.2rem;
+    border-top-right-radius: 1.2rem;
 }
 
-.tag {}
+.meal--img-2 {
+    padding-right: 1.6rem;
+    overflow: hidden;
+}
+
+.tag {
+    display: inline-block;
+    font-size: 1.6rem;
+    font-weight: 500;
+    background: #ed9e59;
+    margin-top: 1.2rem;
+
+    padding: 1rem;
+    border-radius: 2.4rem;
+    cursor: pointer;
+    transition: background 0.5s;
+}
+
+.tag--2 {
+    width: 9.6rem;
+    text-align: center;
+    margin-left: 1.2rem;
+    background: #fcc419;
+}
+
+.tag:hover {
+    background: #e67e22;
+    /* color: #fff; */
+}
 
 .meal--tittle {
     font-size: 1.8rem;
@@ -375,11 +414,20 @@ body {
     display: flex;
     flex-direction: column;
     list-style: none;
-    font-size: 1.8rem;
+    font-size: 1.6rem;
     gap: 1.2rem;
 
 }
 
 .meals--title {
     font-size: 3.2rem;
+}
+
+.meal--box {
+    display: block;
+    padding-left: 3.2rem;
+}
+
+.hid {
+    display: none;
 }
