--- a/html-css-course-master/starter/07-Omnifood-Desktop/content/css/style.css
+++ b/html-css-course-master/starter/07-Omnifood-Desktop/content/css/style.css
@@ -338,7 +338,7 @@ body {
 ##################################################################  SECTION MEALS ########## ############################################### */
 
 .section--meals {
-    background-color: #fff4e6;
+    /* background-color: #fff4e6; */
 }
 
 .heading--meals {
@@ -353,8 +353,7 @@ body {
     grid-template-columns: repeat(3, 1fr);
     gap: 3.2rem;
     justify-content: center;
-    /* text-align: center; */
-    padding: 9.6rem;
+    padding: 4.8rem 4.8rem 0 4.8rem;
 
 }
 
@@ -363,18 +362,19 @@ body {
     border-radius: 1.2rem;
     box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
     /* background: #ddd; */
+
 }
 
 
 
 .meal--img {
+    width: 100%;
     height: 50%;
     border-top-left-radius: 1.2rem;
     border-top-right-radius: 1.2rem;
 }
 
 .meal--img-2 {
-    padding-right: 1.6rem;
     overflow: hidden;
 }
 
@@ -399,7 +399,7 @@ body {
 }
 
 .tag:hover {
-    background: #e67e22;
+    background: #b2f2bb;
     /* color: #fff; */
 }
 
@@ -425,9 +425,55 @@ body {
 
 .meal--box {
     display: block;
-    padding-left: 3.2rem;
+    padding: 0 0 9.6rem 3.2rem;
 }
 
-.hid {
-    display: none;
+.meal--item-box {
+    font-size: 1.8rem;
+
+}
+
+.item--heading {
+    display: flex;
+    justify-content: center;
+}
+
+.item--box {
+
+    padding: 9.6rem 0 0 6.2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    list-style: none;
+}
+
+.icon {
+    color: #e67e22;
+    font-size: 2.4rem;
+    margin-right: 1.8rem;
+}
+
+/* link to direct all meals */
+.all--meals {
+    text-align: center;
+    padding-bottom: 9.6rem;
+    font-size: 2.4rem;
+
+}
+
+.meals--link:link,
+.meals--link:visited {
+    border-bottom: 0.2rem solid currentColor !important;
+    color: #e67e22;
+    text-decoration: none;
+
+    padding-bottom: 0.1rem;
+    transition: all 0.5s;
+}
+
+.meals--link:active,
+.meals--link:hover {
+    padding-bottom: none;
+    background-color: #fcc419;
+    color: currentColor;
 }
