--- a/html-css-course-master/starter/07-Omnifood-Desktop/content/css/style.css
+++ b/html-css-course-master/starter/07-Omnifood-Desktop/content/css/style.css
@@ -335,17 +335,20 @@ body {
 }
 
 /* 
-##################################################################  SECTION MEALS ########## ############################################### */
+################################################################## MEALS SECTION  ########## ############################################### */
 
-.section--meals {
-    /* background-color: #fff4e6; */
+.sub--heading {
+    font-size: 1.6rem !important;
+    text-transform: uppercase;
+    color: #e67e22;
+
 }
 
 .heading--meals {
     font-size: 3.2rem;
     font-weight: 500 !important;
-    text-align: start;
-    padding: 9.6rem 9.6rem 0 9.6rem;
+    text-align: center;
+    padding: 4.8rem 9.6rem 4.8rem 9.6rem;
 }
 
 .grid--3-cols {
@@ -363,8 +366,13 @@ body {
     box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
     /* background: #ddd; */
 
+    transition: all 0.5s;
 }
 
+.meal--img-box:hover {
+    cursor: pointer;
+    transform: translateY(-1.6rem);
+}
 
 
 .meal--img {
@@ -457,23 +465,86 @@ body {
 .all--meals {
     text-align: center;
     padding-bottom: 9.6rem;
-    font-size: 2.4rem;
+    font-size: 1.6rem;
 
 }
 
 .meals--link:link,
 .meals--link:visited {
-    border-bottom: 0.2rem solid currentColor !important;
     color: #e67e22;
     text-decoration: none;
+    /* background-color: #ffffe6; */
+    border-radius: 0.4rem;
 
-    padding-bottom: 0.1rem;
+
+    border-bottom: 0.1rem solid currentColor !important;
+    padding-bottom: 0.2rem;
     transition: all 0.5s;
 }
 
 .meals--link:active,
 .meals--link:hover {
-    padding-bottom: none;
-    background-color: #fcc419;
+    background-color: #ffec99;
     color: currentColor;
+    border-bottom: 0.1rem solid transparent !important;
+}
+
+/* 
+################################################################## TESTIMONIAL SECTION  ########## ############################################### */
+.testimonials {
+    display: grid;
+    grid-template-columns: 0.6fr 0.4fr;
+    row-gap: 3.2rem;
+    column-gap: 4.8rem;
+    background: #eee;
+    align-items: center;
+    padding: 0 2.4rem 2.4rem 2.4rem;
+}
+
+.testimonial {
+    margin-top: 3.2rem;
+}
+
+.testimonial--img {
+    width: 6.4rem;
+    border-radius: 50%;
+    margin-bottom: 1.2rem;
+}
+
+.testimonial--text {
+    font-size: 1.6rem;
+    line-height: 1.6;
+    margin-bottom: 2.4rem;
+}
+
+.testimonial--name {
+    font-size: 1.2rem;
+    color: #999;
+}
+
+/* Galleery */
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1.6rem;
+    padding: 1.6rem;
+    align-items: center;
+}
+
+.gallery--img img {
+    width: 100%;
+}
+
+.gallery--img img:hover {
+
+    /* transform: rotate3d(0, 0, -2, 45deg); */
+    /* transform: rotate(45deg); */
+    transform: scale(1.5);
+    cursor: pointer;
+    transition: all 0.7s;
+}
+
+/* scale transition */
+.gallery figure {
+    overflow: hidden;
 }
