Add pricing section with layout and styling enhancements

--- a/html-css-course-master/starter/07-Omnifood-Desktop/content/css/style.css
+++ b/html-css-course-master/starter/07-Omnifood-Desktop/content/css/style.css
@@ -548,3 +548,8 @@ body {
 .gallery figure {
     overflow: hidden;
 }
+
+.section--pricing {
+    padding: 8.4rem 0;
+    background-color: #fff4e6;
+}
