--- a/html-css-course-master/starter/07-Omnifood-Desktop/content/css/style.css
+++ b/html-css-course-master/starter/07-Omnifood-Desktop/content/css/style.css
@@ -644,3 +644,77 @@ body {
     margin: 6.4rem 0;
     text-align: center;
 }
+
+/* #####################
+###### plan details  ## /
+ #####################
+*/
+.price--include {
+    font-size: 1.6rem;
+    text-align: center;
+    margin-bottom: 4.8rem;
+    color: #999;
+}
+
+.feature--icon-fill {
+    font-size: 2.4rem;
+    color: #2b8a3e;
+}
+
+.grid--4-cols {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 3.2rem;
+    justify-content: center;
+}
+
+.feature--icon {
+    text-align: center;
+    font-size: 2.4rem;
+    height: 2.4rem;
+    width: 2.4rem;
+    color: #e67e22;
+    background-color: #fff4e6;
+    padding: 1.6rem;
+    border-radius: 50%;
+    margin-bottom: 3.2rem;
+}
+
+.feature--title {
+    font-size: 2.4rem;
+    font-weight: 600;
+    margin-bottom: 1.6rem;
+
+}
+
+.feature--text {
+    font-size: 1.6rem;
+    line-height: 1.6;
+    margin-bottom: 1.6rem;
+}
+
+
+/* 
+################################################################## CTA SECTION ########## ############################################### */
+
+.section--cta {
+    padding: 6.4rem 4.8rem;
+    border-radius: 1.2rem;
+    color: #fff;
+}
+
+.cta--box {
+    background-image: linear-gradient(-45deg, #adb5bd, #f03e3e, #fcc419);
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    height: 50rem;
+
+}
+
+.cta--img {
+    padding: 9.6rem;
+    background-image: linear-gradient(45deg, #2b8a3e66, #f03d3d66), url(../img/eating.jpg);
+
+
+    background-position: center;
+}
