--- a/html-css-course-master/starter/07-Omnifood-Desktop/content/css/style.css
+++ b/html-css-course-master/starter/07-Omnifood-Desktop/content/css/style.css
@@ -774,3 +774,102 @@ body {
     background-image: linear-gradient(45deg, #aa97e3, #fcc419);
     transform: translateY(0.2rem);
 }
+
+/* 
+################################################################## FOOTER SECTION ########## ############################################### */
+/* .footer {
+    background-color: #333;
+    color: #fff;
+    padding: 4.8rem 2.4rem;
+} */
+
+.footer {
+    border: 0.2rem solid #ddd;
+}
+
+.footer--5-cols {
+    display: grid;
+    grid-template-columns: 1.5fr 1.5fr 1.5fr 1fr 1fr;
+    padding: 3.2rem 9.6rem;
+    gap: 4.8rem;
+
+
+}
+
+.footer--heading {
+    font-size: 1.8rem;
+    font-weight: 600;
+    margin-bottom: 3.2rem;
+}
+
+.footer--logo {
+    display: flex;
+    flex-direction: column;
+    gap: 1.6rem;
+}
+
+.footer--logo .logo {
+    display: block;
+    height: 3.2rem;
+    margin-bottom: 1.6rem;
+}
+
+.social--links {
+    list-style: none;
+    display: flex;
+    gap: 2.4rem;
+}
+
+.social-icon {
+    font-size: 2.4rem;
+    color: inherit;
+}
+
+.Copyright {
+    font-size: 1.4rem;
+    color: #999;
+    margin-top: auto;
+}
+
+
+.contact address {
+    font-size: 1.6rem;
+    margin-bottom: 1.8rem;
+}
+
+
+.contact a,
+.contact p {
+    text-decoration: none;
+    font-style: normal;
+    display: flex;
+    color: inherit;
+    font-size: 1.6rem;
+
+}
+
+.contact ion-icon {
+    font-size: 1.8rem;
+    color: inherit;
+    margin-right: 1.6rem;
+}
+
+.footer--nav ul {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 1.6rem;
+    font-size: 1.6rem;
+}
+
+.footer--nav a {
+    color: #555;
+    text-decoration: none;
+    transition: all 0.5s;
+}
+
+.footer--nav a:hover,
+.contact a:hover {
+    color: #e67e22;
+    text-decoration: underline;
+}
