Implements responsive design for smaller screens
Adds media queries to adjust the layout and font sizes
for screens with a maximum width of 1250px.

--- a/html-css-course-master/starter/07-Omnifood-Desktop/content/css/style.css
+++ b/html-css-course-master/starter/07-Omnifood-Desktop/content/css/style.css
@@ -764,7 +764,7 @@ body {
     background-image: linear-gradient(45deg, #ffd43b, #7950f2);
     border: none;
     box-shadow: 0 0 2.4rem #fcc31980;
-    margin-left: 50%;
+    /* margin-left: 50%; */
     transition: all 0.5s;
     color: inherit;
 }
