Enhances responsive design with media queries and layout adjustments for hero, footer, and CTA sections

--- a/html-css-course-master/starter/07-Omnifood-Desktop/content/css/style.css
+++ b/html-css-course-master/starter/07-Omnifood-Desktop/content/css/style.css
@@ -127,7 +127,7 @@ body {
 }
 
 .mobile--nav ion-icon[name="menu-outline"] {
-    display: none;
+    display: block;
 }
 
 /* 
@@ -150,9 +150,7 @@ body {
     margin: 0 auto;
 }
 
-.hero-img--box {
-    size: 0px;
-}
+
 
 .hero--img {
     width: 100%;
