--- a/html-css-course-master/starter/07-Omnifood-Desktop/content/css/quieres.css
+++ b/html-css-course-master/starter/07-Omnifood-Desktop/content/css/quieres.css
@@ -169,11 +169,11 @@ insted; 1 rem = 1 em = 16 px  */
 
 
     .heading--primary {
-        font-size: 2.4rem;
+        font-size: 3.2rem;
     }
 
     .hero--img {
-        width: 120%;
+        width: 100%;
     }
 
     .delivered--imgs img {
@@ -235,6 +235,11 @@ insted; 1 rem = 1 em = 16 px  */
 
     .feature--icon {
         width: 1.8rem;
+    }
+
+    .icon {
+        font-size: 1.8rem;
+        margin-right: 0.8rem;
     }
 
     .feature--title {
@@ -305,5 +310,148 @@ insted; 1 rem = 1 em = 16 px  */
 
 
 /* 
-###################################################################   for the screen size of < =750px     ##########   ######################################################### .
+###################################################################   for the screen size of < =752px     ##########   ######################################################### .
 */
+
+@media(max-width:47em) {
+
+    /* size of < = 752px */
+    /* 1rem = 8px */
+    /* html {
+        font-size: 50%;
+    } */
+
+
+    .hero {
+        grid-template-columns: 1fr;
+        gap: 9.6rem;
+        margin: 0 auto;
+    }
+
+    .section--hero {
+        padding: 2.4rem;
+    }
+
+    .logos {
+        gap: 1.8rem;
+    }
+
+    .heading--secondary {
+        font-size: 2.4rem;
+    }
+
+    .section--how {
+        padding: 4.8rem;
+    }
+
+    .step--number {
+        font-size: 2.4rem;
+    }
+
+    .grid--3-cols {
+        grid-template-columns: repeat(4, 1fr);
+        justify-items: center;
+        align-items: center;
+    }
+
+    .meal--img-box {
+        grid-column: span 2;
+    }
+
+    .meal--item-box {
+        grid-column: span 4;
+    }
+
+    .item--box {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        column-gap: 6.4rem;
+    }
+
+    .meals--ingridents {
+        grid-column: span 2;
+    }
+
+    .testimonial--text,
+    .feature--text,
+    .price span,
+    .plan--detail {
+        line-height: 1.8;
+        font-size: 1.6rem;
+        margin-left: 1.2rem;
+    }
+
+    .grid--4-cols {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .feature--icon {
+        width: 3.2rem;
+    }
+
+    .feature--title,
+    .price,
+    .pricing--name {
+        font-size: 2.4rem;
+        padding: 1.8rem;
+    }
+
+    .cta--box {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .cta--img {
+        grid-column: 1/span 2;
+        order: -1;
+    }
+
+    .cta-form {
+        grid-column: span 2;
+    }
+
+    .form--box {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .cta--img {
+        padding: 20rem;
+        background-image: linear-gradient(45deg, #2b8a3e66, #f03d3d66), url(../img/eating.jpg);
+        background-position: center;
+        background-size: cover;
+
+    }
+
+
+    .footer--5-cols {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        row-gap: 6.4rem;
+    }
+
+    .footer--logo {
+        grid-column: 1/span 2;
+        order: 2;
+    }
+
+    .contact {
+        grid-column: 3/span 3;
+        order: 2;
+    }
+
+    .footer--nav,
+    .contact {
+        font-size: 1.8rem;
+    }
+
+    .footer--nav {
+        grid-column: span 2;
+    }
+
+    .contact address,
+    .contact a,
+    .contact p,
+    .footer--link {
+        font-size: 1.6rem;
+    }
+}
