Improves responsiveness for smaller screens
Enhances the website's responsiveness on smaller screens (520px or less) by adjusting font sizes and element spacing.

The base font size is reduced, and various text elements and components, such as headings, descriptions, buttons, and form inputs, are scaled up to maintain readability and visual balance. This ensures a more user-friendly experience on mobile devices.

--- a/Omnifood-project/css/style.css
+++ b/Omnifood-project/css/style.css
@@ -43,6 +43,7 @@
 html {
     font-size: 62.5%;
     scroll-behavior: smooth;
+    overflow-X: hidden;
 }
 
 body {
@@ -51,12 +52,12 @@ body {
     color: #555;
     line-height: 1;
     /* height: 100vh  ; */
-    overflow-x: hidden;
-
+    overflow-X: hidden;
 }
 
 /* HEADER SECTION */
 .header {
+    width: 100%;
     position: relative;
     height: 4.8rem;
     display: flex;
